@@ -48,42 +48,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>17</source>
-                    <target>17</target>
-                    <encoding>utf-8</encoding>
-                    <annotationProcessorPaths>
-                        <path>
-                            <groupId>org.projectlombok</groupId>
-                            <artifactId>lombok</artifactId>
-                            <version>${lombok.version}</version>
-                        </path>
-                    </annotationProcessorPaths>
-                    <compilerArgs>
-                        <arg>--add-opens=java.base/java.util=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.lang=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.lang.invoke=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/java.lang.reflect=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.annotation=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.generics.visitor=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.generics.tree=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.generics.scope=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.generics.parser=ALL-UNNAMED</arg>
-                        <arg>--add-opens=java.base/sun.reflect.generics.factory=ALL-UNNAMED</arg>
-                    </compilerArgs>
-                    <basedir/>
-                </configuration>
-            </plugin>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-surefire-plugin</artifactId>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
+
         </plugins>
 
     </build>
